--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="container-desc">
                         <label for="desc1">Descarte</label>
-                        <input type="number" id="desc1" name="descarte" class="desc">
+                        <input type="text" id="desc1" name="descarte" class="desc">
                     </div>
                 </div>
 
